fix bug #42259 (SimpleXMLIterator loses ancestry) add test